package org.switch2022.project.model;

public class UserProjectsDTO {
    private int code;
    private String name;

    public UserProjectsDTO (int code, String name) {
        this.code = code;
        this.name = name;
    }
}
