@startuml

class UserProjectsUI {
}

class UserProjectsController {
projectList : ProjectList
listUserProjectsDTO (Account currentUser)
}

class Project {
code : Integer
name : String
customer : String
startDate : Date
endDate : Date
status : String
getCode()
getName()
getList()
create(userProjectsDTO)
}

class ProjectList {
listSize()
getProjectIndex(i)
}

class UserProjectsDTO{
code : Integer
name : String
}

class ResourceList {
listResourceSize()
getResourceIndex(j)
}

class Resource {
role : Role
account : Account
project : Project
startDate : Date
endDate : Date
getAccount()
getEndDate()
}

ProjectList "                                          1" *-- "*" Project : has
UserProjectsUI "       1" o-- "           1" UserProjectsController
UserProjectsController "1" o-- "                                                 1" ProjectList
ProjectList ..> UserProjectsDTO
Project ..> UserProjectsDTO
Project "                     1" *-- "     *" ResourceList : has
ResourceList "                     1" *-- "     *" Resource : has


@enduml